# src/Backend/UnderseaBackend/Undersea.API/Controllers/BuildingsController.cs
@@ -1,4 +1,7 @@
 ﻿using Microsoft.AspNetCore.Mvc;
+using System;
+using System.Collections.Generic;
+using System.Security.Claims;
 using System.Threading.Tasks;
 using Undersea.BLL.DTOs;
 using Undersea.BLL.Services;
@@ -17,14 +20,16 @@ namespace Undersea.API.Controllers
         }
 
         [HttpGet]
-        public async Task<ActionResult<BuildingDto>> GetBuilding()
+        public async Task<ActionResult<List<BuildingDto>>> GetBuilding()
         {
-            return Ok(await _buildingService.GetBuilding());
+            Guid id = Guid.Parse(User.FindFirst(ClaimTypes.NameIdentifier)?.Value);
+            return Ok(await _buildingService.GetBuilding(id));
         }
         [HttpPost]
         public async Task PurchaseBuilding(BuildingDto building)
         {
-            await _buildingService.PurchaseBuilding(building);
+            Guid id = Guid.Parse(User.FindFirst(ClaimTypes.NameIdentifier)?.Value);
+            await _buildingService.PurchaseBuilding(id, building);
         }
     }
 }
