# src/Backend/UnderseaBackend/Undersea.API/swagger.json
@@ -238,7 +238,10 @@
             "x-nullable": false,
             "description": "",
             "schema": {
-              "$ref": "#/definitions/BuildingDto"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/BuildingDto"
+              }
             }
           }
         }
@@ -266,10 +269,31 @@
         ],
         "responses": {
           "200": {
-            "x-nullable": true,
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/BuildingType": {
+      "get": {
+        "tags": [
+          "BuildingType"
+        ],
+        "operationId": "BuildingType_GetBuildings",
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": false,
             "description": "",
             "schema": {
-              "type": "file"
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/BuildingAttributeDto"
+              }
             }
           }
         }
@@ -717,6 +741,40 @@
         0,
         1
       ]
+    },
+    "BuildingAttributeDto": {
+      "type": "object",
+      "required": [
+        "buildingType",
+        "price",
+        "population",
+        "coralProduction",
+        "hosting"
+      ],
+      "properties": {
+        "buildingType": {
+          "$ref": "#/definitions/BuildingType"
+        },
+        "price": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "population": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "coralProduction": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "hosting": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "name": {
+          "type": "string"
+        }
+      }
     },
     "CityDto": {
       "type": "object",
